# Rosy

./: .gitignore  2026-04-05.md  AI_STUDIO_REALITY_CHECK.md  MBBR Deep Dive Report.md  MBBR Design Calculator Documentation.md  TestAutoPush.md  karpathy_autoresearch_deep_dive.md
Agentropolis/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_POLICY.md  FAQ.md  GLOSSARY.md  GOVERNANCE.md  LOCAL_DEVELOPMENT.md  LOW_COST_ARCHITECTURE.md  MIGRATION_TO_LOW_COST.md  Makefile  PROJECT_CHARTER.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  SESSION_SUMMARY.txt  TECH_STACK.md  VISION.md  WEBHOOKS.md  check_tables.py  debug_init.py  docker-compose.yml  pyproject.toml  run_ecs_simulation.py  run_simulation.py  run_tests.py  start_agentropolis.sh  test_conn.py  test_ecs_basic.py  test_verify.py
Agentropolis/agentropolis/: __init__.py  config.py  database.py  simulation.py
Agentropolis/agents/: SPECIFICATION.md
Agentropolis/api/: SPECIFICATION.md
Agentropolis/architecture/: OVERVIEW.md
Agentropolis/deployment/: INFRASTRUCTURE.md
Agentropolis/docs/: TESTING_TASK1.md
Agentropolis/economy/: DESIGN.md
Agentropolis/examples/: README.md
Agentropolis/interactions/: SPECIFICATION.md
Agentropolis/roadmap/: PLAN.md
Agentropolis/scaling/: PLAN.md
Agentropolis/scripts/: benchmark.py  create_tables.py  seed_town.py
Agentropolis/security/: SPECIFICATION.md
Agentropolis/testing/: STRATEGY.md
Agentropolis/tests/: conftest.py  test_brains.py  test_config.py  test_database.py  test_ecs_implementation.py  test_ecs_simple.py  test_models.py  (+1 more)
(+38 files in other folders)
