[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentropolis"
description = "Virtual town where AI agents live"
authors = [{name = "E T", email = "team@agentropolis.org"}]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.28.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/yourorg/agentropolis"
Documentation = "https://docs.agentropolis.org"
Repository = "https://github.com/yourorg/agentropolis.git"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
brains-gpt = ["openai>=1.0"]
brains-claude = ["anthropic>=0.20"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=agentropolis"]
